@@ -10,6 +10,7 @@ http://sourceforge.net/tracker/?group_id=86862
 Version 0.7.5.9, 2008-02-
 ---------------
 + AVC: CABAC detection
++ #1886241: AVC: all SEI userdata infos from x264/eavc in Writing library settings
 x AVC: FPS were sometimes 2x the reality
 x RealMedia parser was brocken
 x FLV parser was crashing
